<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.view.HomeActivity">

    <ImageView
        android:id="@+id/image_fazendinha"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_250"
        android:layout_margin="@dimen/margin_16"
        android:contentDescription="@string/descrissao_imagem_mundoBita"
        android:src="@drawable/mundo_bitafazendin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <TextView
        android:layout_width="239dp"
        android:layout_height="21dp"
        android:layout_margin="@dimen/margin_16"
        android:gravity="center"
        android:text="@string/nome_musica"
        android:textSize="@dimen/textSize_18"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/image_fazendinha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554" />

    <TextView
        android:id="@+id/text_musica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_16"
        android:lineHeight="16dp"
        android:text="@string/musica_fazendinha"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_fazendinha"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_detalhe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:backgroundTint="@color/cor_secundaria"
        android:text="@string/ver_detalhe"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_musica"
        app:layout_constraintVertical_bias="0.82" />

</androidx.constraintlayout.widget.ConstraintLayout>