<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".informacoes.album.view.AlbumActivity">

    <ImageView
        android:id="@+id/imageDetalhe"
        android:layout_margin="@dimen/margin_16"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/bita_e_o_circo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_nome"
        android:layout_width="0dp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/nome_musica"
        android:textSize="@dimen/textSize_16"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:tooltipText="@string/nome_album"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageDetalhe" />

    <TextView
        android:id="@+id/text_Ano"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:text="@string/descricao_do_album"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescricao"
        app:layout_constraintVertical_bias="0.24" />

    <TextView
        android:id="@+id/textDescricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:layout_marginTop="92dp"
        android:text="@string/detalhe_do_album"
        android:textSize="@dimen/size_12"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_nome"
        app:layout_constraintVertical_bias="0.208" />

    <ImageView
        android:id="@+id/imagem_favorito"
        android:layout_width="48dp"
        android:layout_margin="@dimen/margin_16"
        android:layout_height="48dp"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Ano"
        app:layout_constraintVertical_bias="0.143" />


</androidx.constraintlayout.widget.ConstraintLayout>